src/test/ui/const-generics/issues/issue-69654-run-pass.stderr
error[E0599]: the function or associated item `foo` exists for struct `Foo<{_: usize}>`, but its trait bounds were not satisfied
  --> $DIR/issue-69654-run-pass.rs:16:10
   |
LL | struct Foo<const N: usize> {}
   | -------------------------- function or associated item `foo` not found for this
...
LL |     Foo::foo();
   |          ^^^ function or associated item cannot be called on `Foo<{_: usize}>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `[u8; _]: Bar<[(); _]>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
